--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header id="header">
             <div class="logo">
-                <a href="#hidden" style="text-decoration:none;"><img src="https://avatars1.githubusercontent.com/u/19750661?v=3&s=86"></a>
+                <a href="#hidden" style="text-decoration:none;"><img src="https://openclipart.org/image/2400px/svg_to_png/170680/sun-rain.png"></a>
             </div>
             <div class="content">
                 <div class="inner">
