--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header id="header">
             <div class="logo">
-                <a href="#hidden" style="text-decoration:none;"><img src="https://openclipart.org/image/2400px/svg_to_png/170680/sun-rain.png" max-width=86px></a>
+                <a href="#hidden" style="text-decoration:none;"><img src="https://openclipart.org/image/2400px/svg_to_png/170680/sun-rain.png" style="max-height: 86px; max-width: 86px;"></a>
             </div>
             <div class="content">
                 <div class="inner">
