--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>HowToCode</title>
+    <title>Meteorology Course | Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -22,8 +22,8 @@
             </div>
             <div class="content">
                 <div class="inner">
-                    <h1>PocketMine Plugin Course</h1>
-                    <p><b>Learn how to code. <br> <br> Website credit goes to @remote_vase & @Ad5001. <br> Most original lessons were created by @Taki21 with some helpful additions by Inactive-to-Reactive. New lessons such as "Tasks" are added by Inactive-To-Reactive members (such as @Ad5001 and @remote_vase)<br> <br> Suggest edits <a href=" https://github.com/Sites4Code/MCPE/issues"> Here</a>.</b></p>
+                    <h1>Meteorology Course</h1>
+                    <p><b>Learn a variety of stuff such as meteorology vocab</b></p>
                 </div>
             </div>
             <nav>
