--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <p class="copyright">&copy; Inactive-To-Reactive Website Team</p>
+            <p class="copyright">&copy; <a href="http://theroyalblock.tk">TheRoyalBlock</a></p>
         </footer>
 
     </div>
