--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,13 +1,9 @@
 <!-- Vol1 -->
-
-
-
-
 <span>
     <h2 class="major">
-    Volume 1: Basics and Concepts</h2>
-<p>In this first Volume, you will learn all of the items of code that are required in order for the plugin to work. You will also find the most basic functions that are optional, but they add a nice finishing (or starting, in this case) touch to the plugin!</p>
-<h3>First Steps</h3>
+    Part 1: Meteorology Vocabulary</h2>
+<p>In this first part, you will learn what the words "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
+<h3></h3>
 <pre><code>&lt;?php//All PHP Files must start with this.
 
 namespace Inactive-to-Reactive; //This should be the subfolder of the src directory. Based off of the folder structure example in the "intro" section, this is Inactive-to-Reactive
