--- a/pages/intro.html
+++ b/pages/intro.html
@@ -1,4 +1,7 @@
-<!-- Vol1 -->
+<!-- Part 1 -->
+
+
+
 <span>
     <h2 class="major">
     Part 1: Meteorology Vocabulary</h2>
@@ -123,4 +126,4 @@ class Inactive-to-ReactiveExample extends PluginBase implements Listener{
    		$this->getServer()->broadcastMessage(C::GREEN."$name Joined The Inactive-to-Reactive test Server! Awesome!");
 	}
 }</code></pre>
-<button onclick="location.hash='Vol2'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button></span>
+<button onclick="location.hash='Vol1'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button></span>
