--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -4,7 +4,7 @@
 
 <span>
 <h2 class="major">
-    Introduction</h2>
+    BLABLABLA</h2>
 <p>Welcome to the new and redesigned "Learn How To Code" website! Our goal is to teach you how to code plugins for PocketMine-MP and other spoons, so that you can contribute to the large community by submitting your own plugins/addons!</p>
 <p>Credits go to @TheKnightGamer for publicizing and sharing the website, to @remote_vase for creating the website and adding a little to the tutorials, and to @Taki21 for creating the tutorials and posting them on ImagicalMine Community forums.
 </p>
