--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#intro">Start Course !</a></li>
+                    <li><a href="#intro">Start Course</a></li>
                 </ul>
             </nav>
         </header>
