--- a/pages/intro.html
+++ b/pages/intro.html
@@ -4,11 +4,9 @@
 
 <span>
 <h2 class="major">
-    BLABLABLA</h2>
-<p>Welcome to the new and redesigned "Learn How To Code" website! Our goal is to teach you how to code plugins for PocketMine-MP and other spoons, so that you can contribute to the large community by submitting your own plugins/addons!</p>
-<p>Credits go to @TheKnightGamer for publicizing and sharing the website, to @remote_vase for creating the website and adding a little to the tutorials, and to @Taki21 for creating the tutorials and posting them on ImagicalMine Community forums.
-</p>
-<h3>Sample plugin.yml</h3>
+    Part 1: Meteorology Vocabulary</h2>
+<p>In this first part, you will learn what the words "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
+<h3></h3>
 <pre><code>name: PluginName
 author: CoderName
 api: [3.0.0, 3.0.0-alpha4]
