--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content">
                 <div class="inner">
                     <h1>Meteorology Course</h1>
-                    <p><b>Learn a variety of stuff such as meteorology vocab, how acid rain forms, what we can do to prevent acid rain, and a quiz at the end of it all!</b></p>
+                    <p><b>Learn a variety of facts such as meteorology vocab, how acid rain forms, what we can do to prevent acid rain, and a quiz at the end of it all!</b></p>
                 </div>
             </div>
             <nav>
