--- a/pages/intro.html
+++ b/pages/intro.html
@@ -4,35 +4,19 @@
 
 <span>
 <h2 class="major">
-    Part 1: Meteorology Vocabulary</h2>
+    Definitions</h2>
 <p>In this first part, you will learn what the words "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
-<h3></h3>
-<pre><code>name: PluginName
-author: CoderName
-api: [3.0.0, 3.0.0-alpha4]
-version: 1.0
-main: Inactive-to-Reactive/Inactive-to-ReactiveExample
-# For "main" statement above, find the main class path, but exclude "src"
-
-# Commands: If ur plugin has commands: Do this:
-command:
-	cmdname:
-		description: cmdnameDescription
-		usage: /cmdname
-	cmd2name:
-		description: cmd2nameDescription
-		usage: /cmd2name
-
-# Permissions 
-permissions:
-	cmdname.command:
-		default: true
-	cmd2name.command:
-		default: true</code></pre>
-<blockquote>Do not forget to substitute your plugin information (name, author, main path, commands, and permissions).</blockquote>
-<h3>Sample file structure</h3>
-<pre><span></span>PluginName <br>&#9;├── plugin.yml <br>&#9;&#9;└── src<br>&#9;&#9;&#9;└── Inactive-to-Reactive<br>&#9;&#9;&#9;&#9;└── Inactive-to-ReactiveExample.php
-</pre>
-<blockquote>Do not forget to change "Inactive-to-Reactive" to your name (because YOU are the author, not us)!</blockquote>
+<h3>Temperature</h3>
+	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a temperature.</blockquote>
+<h3>Pressure</h3>
+	<blockquote>Definition</blockquote>
+<h3>Pressure</h3>
+	<blockquote>Definition</blockquote>
+<h3>Pressure</h3>
+	<blockquote>Definition</blockquote>
+<h3>Pressure</h3>
+	<blockquote>Definition</blockquote>
+<h3>Pressure</h3>
+	<blockquote>Definition</blockquote>
 <button onclick="location.hash='Vol1'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button>
 </span>
