--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,13 +10,13 @@
 	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a temperature.</blockquote>
 <h3>Pressure</h3>
 	<blockquote>Definition</blockquote>
-<h3>Pressure</h3>
+<h3>Wind</h3>
 	<blockquote>Definition</blockquote>
-<h3>Pressure</h3>
+<h3>Relative Humidity</h3>
 	<blockquote>Definition</blockquote>
-<h3>Pressure</h3>
+<h3>Clouds</h3>
 	<blockquote>Definition</blockquote>
-<h3>Pressure</h3>
+<h3>Precipitation</h3>
 	<blockquote>Definition</blockquote>
-<button onclick="location.hash='Vol1'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button>
+<button onclick="location.hash='Vol1'">Next Lesson</button>
 </span>
