Just in case...

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -9,11 +9,11 @@
 <h3>Temperature</h3>
 	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a temperature.</blockquote>
 <h3>Pressure</h3>
-	<blockquote>Definition</blockquote>
+	<blockquote>The amount of force that is applied on a certain area.</blockquote>
 <h3>Wind</h3>
-	<blockquote>Definition</blockquote>
+	<blockquote>The natural movement of the air in a certain direction.</blockquote>
 <h3>Relative Humidity</h3>
-	<blockquote>Definition</blockquote>
+	<blockquote>How much water vapor is in the air compared to how much there <b>could</b> be.</blockquote>
 <h3>Clouds</h3>
 	<blockquote>Definition</blockquote>
 <h3>Precipitation</h3>
