--- a/pages/intro.html
+++ b/pages/intro.html
@@ -15,8 +15,8 @@
 <h3>Relative Humidity</h3>
 	<blockquote>How much water vapor is in the air compared to how much there <b>could</b> be.</blockquote>
 <h3>Clouds</h3>
-	<blockquote>Definition</blockquote>
+	<blockquote>Clouds are visible "chunks" of water vapor condensed. They are usually high above the ground and appear in multiple forms. </blockquote>
 <h3>Precipitation</h3>
-	<blockquote>Definition</blockquote>
+	<blockquote>Snow, Rain, Sleet, or Hail that falls towards the ground.</blockquote>
 <button onclick="location.hash='Vol1'">Next Lesson</button>
 </span>
