--- a/pages/intro.html
+++ b/pages/intro.html
@@ -7,7 +7,7 @@
     Definitions</h2>
 <p>In this first part, you will learn what the words "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
 <h3>Temperature</h3>
-	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a temperature.</blockquote>
+	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a thermometer.</blockquote>
 <h3>Pressure</h3>
 	<blockquote>The amount of force that is applied on a certain area.</blockquote>
 <h3>Wind</h3>
