--- a/pages/intro.html
+++ b/pages/intro.html
@@ -5,7 +5,9 @@
 <span>
 <h2 class="major">
     Definitions</h2>
-<p>In this first part, you will learn what the words "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
+<p>In this first part, you will learn what the words "Water Vapor", "temperature", "pressure", "wind", "relative humidity", "clouds", and "precipitation" mean.</p>
+<h3>Water Vapor</h3>
+	<blockquote>Water in its gas form. Example: Steam.</blockquote>
 <h3>Temperature</h3>
 	<blockquote>How hot or cold an object or substance is. Temperature is usually measured with a thermometer.</blockquote>
 <h3>Pressure</h3>
