--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -4,8 +4,8 @@
 
 <span>
     <h2 class="major">
-    Severe Storm Project: <br>Nor'Easters </h2>
-<p>In this part of the course, you will learn what Nor'Easters are, how Nor'Easters occur, where Nor'Easters occur, how to prepare for a Nor'Easter, and what you should/should not do while a Nor'Easter is occurring..</p>
+    Severe Storm Project: <br>Blizzards </h2>
+<p>In this part of the course, you will learn what Blizzards are, how Blizzards occur, where Blizzards occur, how to prepare for a Nor'Easter, and what you should/should not do while a Nor'Easter is occurring..</p>
 <h3></h3>
 <pre><code>&lt;?php//All PHP Files must start with this.
 
