--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -5,18 +5,13 @@
 <span>
     <h2 class="major">
     Severe Storm Project: <br>Blizzards </h2>
-<p>In this part of the course, you will learn what Blizzards are, how Blizzards occur, where Blizzards occur, how to prepare for a Nor'Easter, and what you should/should not do while a Nor'Easter is occurring..</p>
-<h3></h3>
-<pre><code>&lt;?php//All PHP Files must start with this.
-
-namespace Inactive-to-Reactive; //This should be the subfolder of the src directory. Based off of the folder structure example in the "intro" section, this is Inactive-to-Reactive
-
-#next, we add the "use" statements. Note, more use statements will be added as we progress through the lessons
-use pocketmine\plugin\PluginBase;
-
-#Then, we type the class statement:
-class Inactive-to-ReactiveExample extends PluginBase{ //This has a specific format: class (The File Name) extends PluginBase{ The "PluginBase" part differs based on which file it is, but that is very advanced. You will find out more another time.
-								</code></pre>
+<p>In this part of the course, you will learn what Blizzards are, how Blizzards occur, where Blizzards occur, how to prepare for a Blizzard, and what you should/should not do while a Blizzard is occurring..</p>
+<h3>What is a Blizzard?</h3>
+<pre><code>
+A Blizzard is a severe Snow Storm. The winds are sustained at a speed of 35 miles per hour at a minimum, and it must last for at least 3 hours. 
+The visibility must be a maximum of 0.25 miles in order for it to be a Blizzard as opposed to a Snow Storm. 
+It is more likely for whiteout conditions to occur in a Blizzard, and less likely for there to be a whiteout in a regular Snow Storm.
+</code></pre>
 <h3>Enable, Disable, and Load functions!</h3>
 After the class statement press ENTER key and type
 <pre><code>public function onLoad(){</code></pre>
