--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -12,7 +12,7 @@ A Blizzard is a severe Snow Storm. The winds are sustained at a speed of 35 mile
 The visibility must be a maximum of 0.25 miles in order for it to be a Blizzard as opposed to a Snow Storm. 
 It is more likely for whiteout conditions to occur in a Blizzard, and less likely for there to be a whiteout in a regular Snow Storm.
 </code></pre>
-<h3>Enable, Disable, and Load functions!</h3>
+<h3>How does a Blizzard occur?</h3>
 After the class statement press ENTER key and type
 <pre><code>public function onLoad(){</code></pre>
 <blockquote>If you want a Load Message!</blockquote>
