How to prepare.

--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -27,4 +27,10 @@ The states in Northeastern United States of America
 The provinces of Canada
 The mountains in Western United States of America.
 	</code></pre>
-<button onclick="location.hash='Vol2'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button></span>
+	<h3>Can you prepare for a blizzard? If so, how?</h3>
+	Yes, you can prepare for a blizzard. <br>
+	Step 1: Make sure that you have the following in your emergency kit:
+	<ul>
+		<li>Environmentally-safe ice-melting products for walkways. EG: Rock salt</li>
+	</ul>
+<button onclick="location.hash='Vol2'">Next Lesson</button></span>
