More coming soon!

--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -32,5 +32,37 @@ The mountains in Western United States of America.
 	Step 1: Make sure that you have the following in your emergency kit:
 	<ul>
 		<li>Environmentally-safe ice-melting products for walkways. EG: Rock salt</li>
+		<li>Small quantities of Sand for improved traction</li>
+		<li>Snow shovels and snow-removal equipment</li>
+		<li>Dry wood in case power goes out for your fireplace or wood-stove</li>
+		<li>Blankets, jackets, and extra clothing</li>
+		<li>Wind up radio for the NOAA's Weather broadcast alerts</li>
+	</ul>
+	Step 2: Make sure that your family's car is prepared by:
+	<ul>
+		<li>Check key components of your car to make sure it is in top shape, including Antifreeze levels, oil, and the heater.</li>
+		<li>Check the brakes for wear and tear. Replace them if damaged</li>
+		<li>Replace your tires, preferably with proper winter tires. They should have good treads. In some areas which experience lots of snow, the tires may need chains or studs on the tires.</li>
+	</ul>
+	Step 3: Prepare your home by:
+	<ul>
+		<li>Covering windows with plastic and insulating walls</li>
+		<li>Clean gutters, fix roof-holes, and cut branches that may fall</li>
+		<li>Check your roof's maximum capacity for the weight of snow. Cleaning may be needed if the roof cannot hold the weight of the snow from the upcoming blizzard</li>
+		<li>Turn off the pipes to avoid frozen pipes or pipes bursting</li>
+		<li>Drain your pool and cover it, if you haven't already</li>
+	</ul>
+	Step 4: Understand what key terms mean. These include:
+	<ul>
+		<li>Winter Weather advisory</li>
+		<li>Winter Storm watch</li>
+		<li>Winter Storm Warning</li>
+		<li>Blizzard Warning</li>
+		<li>And more</li>
+	</ul>
+	<h3>What to do?</h3>
+	While a blizzard is occuring, you should:
+	<ul>
+		<li>Stay indoors</li>
 	</ul>
 <button onclick="location.hash='Vol2'">Next Lesson</button></span>
