--- a/pages/Vol1.html
+++ b/pages/Vol1.html
@@ -64,5 +64,14 @@ The mountains in Western United States of America.
 	While a blizzard is occuring, you should:
 	<ul>
 		<li>Stay indoors</li>
+		<li>Don't drink alcohol, it dehydrates you and alter's your body's ability to tell how cold it is</li>
+		<li>Keep warm</li>
+		<li>Close drafts, close windows, close doors.</li>
+		<li>Check for ongoing leaks</li>
+	</ul>
+	While a blizzard is occuring, you should not:
+	<ul>
+		<li>Go outside</li>
+		<li>Drive your car</li>
 	</ul>
 <button onclick="location.hash='Vol2'">Next Lesson</button></span>
