--- a/pages/Vol2.html
+++ b/pages/Vol2.html
@@ -4,10 +4,17 @@
     
     
     <h2 class="major">
-    Volume 2: Commands</h2>
-<h3>Setting up a command</h3>
-Using commands in a plugin enchants your Plugin! Commands can automatically and easily do things for you!
-<blockquote>Insert these "use" statements if you are using commands:</blockquote>
+    TORNADOES!</h2>
+    <p>In this section, you will learn all about tornadoes! We will even investigate a few myths and prove them true or false.</p>
+<h3>How does a tornado form, and where?</h3>
+We do not know for sure how a tornado forms, but we speculate that:
+<ul>
+    <li>Most tornadoes form from thunderstorms</li>
+    <li>Moist, warm air and cold air should meet up</li>
+    <li>The meeting up of these two air temperatures creates an instability in the atmosphere</li>
+    <li>In the lower atmosphere, an invisible spinning effect is created, after wind direction and wind speed change</li>
+    <li>Rising air tilts the spinning effect from horizontal to vertical, extending through most of the storm</li>
+</ul>
 <pre><code>// Command
 use pocketmine\command\Command;
 
