--- a/pages/Vol2.html
+++ b/pages/Vol2.html
@@ -7,7 +7,7 @@
     TORNADOES!</h2>
     <p>In this section, you will learn all about tornadoes! We will even investigate a few myths and prove them true or false.</p>
 <h3>How does a tornado form, and where?</h3>
-We do not know for sure how a tornado forms, but we speculate that:
+<blockquote>We do not know for sure how a tornado forms, but we speculate that:</blockquote>
 <ul>
     <li>Most tornadoes form from thunderstorms</li>
     <li>Moist, warm air and cold air should meet up</li>
@@ -15,70 +15,7 @@ We do not know for sure how a tornado forms, but we speculate that:
     <li>In the lower atmosphere, an invisible spinning effect is created, after wind direction and wind speed change</li>
     <li>Rising air tilts the spinning effect from horizontal to vertical, extending through most of the storm</li>
 </ul>
-<pre><code>// Command
-use pocketmine\command\Command;
-
-// Person who does command
-use pocketmine\command\CommandSender;</code></pre>
-<blockquote>To setup the command we use a public function! Layout:</blockquote>
-<pre><code>public function onCommand(CommandSender $sender,Command $cmd,$label,array $args){
-}</code></pre> It may be long for a function, but thats how you're gonna make commands!
-<blockquote>After Public Function onCommand():</blockquote>
-
-<pre><code>if($cmd->getName() == "test"){ //In this case, we will make the command "/test"
-     $sender->sendMessage("This is a Test");</code></pre> Explanation: In the scenario above, if the command "/test" is issued, the server will send a message to the player who executed this Command! Congratulations on your first "if" statement! These
-are very important in PHP!<br>
-<BR>
-<blockquote>PREVIEW: Lets see what we got so far...</blockquote>
-<pre><code>&lt;?php
-
-namespace Inactive-to-Reactive;
-
-use pocketmine\plugin\PluginBase;
-use pocketmine\event\Listener;
-use pocketmine\event\player\PlayerJoinEvent;
-use pocketmine\utils\TextFormat;
-use pocketmine\command\Command;
-use pocketmine\command\CommandSender;
-
-class Inactive-to-ReactiveExample extends PluginBase implements Listener{
-     public function onEnable(){
-          $this->getServer()->getPluginManager()->registerEvents($this,$this);
-          $this->getLogger()->info("Plugin Enabled");
-     }
-     public function onJoin(PlayerJoinEvent $event){
-          $player = $event->getPlayer();
-          $name = $player->getName();
-          $this->getServer()->broadcastMessage(TextFormat::GREEN."$name Joined The Inactive-to-Reactive test Server! Awesome!");
-     }
-     public function onCommand(CommandSender $sender, Command $cmd, $label, array $args){
-          if($cmd->getName() == "test"){
-               $sender->sendMessage("This Is A Test!");
-          }
-          return true;
-     }
-}</code></pre> The "return true" statement goes AFTER the if brackets "{" and "}" So when some one does /test they get a message "This is a test!" <br> Is this too boring for you? Wanna make it EVEN BETTER?
-
-<blockquote>This is how you can make the command "/test" a LOT better! Now, when the player issues a command, he/she will recieve 4 steak!</blockquote>
-<pre><code>if($cmd->getName() == "test"){
-     $sender->getInventory()->addItem(Item::get(364,0,2)); //364 = Item ID Value (in this case, 364 is steak)
-     $sender->sendMessage(TextFormat::BOLD."You have just recieved 4 steak!");
-}
-return true;</code></pre> This command lets you get four steaks! This shows you almost how powerful commands can be, but there is a LOT more! Unfortunately, something is not right! What would happen if the CONSOLE was the command sender? How do we prevent
-the Console?
-<br><br>
-<blockquote>To prevent the situation above we are going to use an if statement including "instanceof" </blockquote>
-
-<pre><code>if($cmd->getName() == "test"){
-     if(!$sender instanceof Player){ // Basically this checks if the Command Sender is NOT a player
-          $sender->sendMessage("This Command Only Works for players! Please perform this command IN GAME!"); // For Console Command Sender
-     }else{ //if command sender is not a CONSOLE
-          $sender->getInventory()->addItem(Item::get(364,0,4));
-          $sender->sendMessage("You have just recieved 4 steak!");
-     }
-}
-return true;</code></pre> 
-    <br>This handy dandy chunk of code will make sure that your server does not crash when it tries to give the console 4 steak (which it can no longer do).
+<blockquote>In the United States, tornadoes tend to form in the Great Plains (found near central USA), and a part of florida bordering the Gulf of Mexico. The area in the Great Plains of Central USA is known as Tornado Alley where cold air from Canada meets the warm air from the Gulf of Mexico. On average nine tornadoes occur each year in Oklahoma and Texas (per 10,000 square miles).</blockquote>
     <h3>Wanna know EVEN more? Arguments.</h3>
     Great ! Now that we know how to do "basic" commands, let's make the command <i>even better</i> by allowing the user to choose how many steaks he wants !<br>
     We'll take a look at a variable that we added without knowing what it was... I talk about the <code>$args</code> variable!<br>
