--- a/pages/Vol2.html
+++ b/pages/Vol2.html
@@ -31,4 +31,16 @@
     <blockquote>FACT! The probability of a tornado occuring is lower at night and during winter, but it is still possible. In the past, there have been tornadoes that caused more death an destruction than any other tornados in that area!</blockquote>
     #7: Equalize the pressure in your house by opening windows.
     <blockquote>MYTH! A tornado can easily tear off your roof, or smash a car through your wall, and that will equalize the pressure for you. Don't waste your time!</blockquote>
+    <h3>A tornado is threatening me! What should I do?.</h3>
+    <ul>
+        <li>Go to your safe room, or if outside, seek shelter. If not, proceed to the next bullet points</li>
+        <li>If you find shelter, go to the lowest floor of the building, and go to the inner-most room which is the most protected from the outside. If you do not find shelter, proceed to the next bullet points</li>
+        <li>Do not try to outrun the tornado, they can go up to 70 miles per hour.</li>
+        <li>Go to any sturdy shelter nearby, as hail and lightning often accompany tornadoes</li>
+        <li>Find a place to lay down flat. Try to make sure that this place is out of the area where the tornado is heading, and is lower than other areas. </li>
+        <li>Do not hide under an overpass</li>
+        <li>Abandon your vehicle to seek shelter.<li>
+        <li>Avoid sheltering under/near solitary objects or groups of trees due to lightning.<li>
+        <li>Protect your head and neck</li>
+    </ul>
  <button onclick="location.hash='Vol3'">Next Lesson</button></span>
