--- a/pages/hidden.html
+++ b/pages/hidden.html
@@ -8,9 +8,8 @@
 			<h4 class="major">
 				<a href="#intro" style="text-decoration:none;">Definitions</a><br>
 				<a href="#Vol1" style="text-decoration:none;">Severe Storm Project</a><br>
-				<a href="#Vol2" style="text-decoration:none;">COMING SOON</a><br>
-				<a href="#Vol3" style="text-decoration:none;">COMING SOON</a><br>
-				<a href="#Vol4" style="text-decoration:none;">COMING SOON</a><br>
+				<a href="#Vol3" style="text-decoration:none;">Tornados!</a><br>
+				<a href="#Vol4" style="text-decoration:none;">Local Weather Phenomenon</a><br>
 				<a href="#quiz" style="text-decoration:none;">Quiz</a><br>
 			</h4>
 </section>
