--- a/pages/Vol3.html
+++ b/pages/Vol3.html
@@ -5,7 +5,25 @@
     Climactic Conditions</h2>
     <p>This is the longest part of the course. In this section, you will learn about El Niño, La Niña, and more. I have made a presentation so that this section does not have an overly long page.</p>
     <h3>The Presentation</h3>
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container embed-responsive embed-responsive-4by3'><iframe src='https://docs.google.com/presentation/d/1TM6035OotHgtqGMnK0IZkuGVoRy_Lg_nV1_miV-WT6Q/edit?usp=sharing' frameborder='0' allowfullscreen></iframe></div>
+<style>
+    .embed-container { 
+        position: relative; 
+        padding-bottom: 56.25%; 
+        height: 0; 
+        overflow: hidden; 
+        max-width: 100%; 
+    } 
+    .embed-container iframe, .embed-container object, .embed-container embed { 
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; 
+    }
+    </style>
+    <div class='embed-container embed-responsive embed-responsive-4by3'>
+        <iframe src='https://docs.google.com/presentation/d/1TM6035OotHgtqGMnK0IZkuGVoRy_Lg_nV1_miV-WT6Q/edit?usp=sharing' frameborder='0' allowfullscreen></iframe>
+    </div>
 
 <button onclick="location.hash='Vol4'">Next Lesson</button>
 </span>
