--- a/pages/Vol3.html
+++ b/pages/Vol3.html
@@ -22,7 +22,7 @@
     }
     </style>
     <div class='embed-container embed-responsive embed-responsive-4by3'>
-        <iframe src='https://docs.google.com/presentation/d/1TM6035OotHgtqGMnK0IZkuGVoRy_Lg_nV1_miV-WT6Q/edit?usp=sharing' frameborder='0' allowfullscreen></iframe>
+        <iframe src='https://docs.google.com/presentation/d/1TM6035OotHgtqGMnK0IZkuGVoRy_Lg_nV1_miV-WT6Q/embed' frameborder='0' allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
 
 <button onclick="location.hash='Vol4'">Next Lesson</button>
