--- a/pages/Vol3.html
+++ b/pages/Vol3.html
@@ -2,7 +2,7 @@
 
 <span>
     <h2 class="major">
-    Climactic Conditions</h2>
+    Local Weather Phenomenon</h2>
     <p>This is the longest part of the course. In this section, you will learn about El Niño, La Niña, and more. I have made a presentation so that this section does not have an overly long page.</p>
     <h3>The Presentation</h3>
 <style>
