--- a/pages/Vol3.html
+++ b/pages/Vol3.html
@@ -3,7 +3,7 @@
 <span>
     <h2 class="major">
     Local Weather Phenomenon</h2>
-    <p>This is the longest part of the course. In this section, you will learn about El Niño, La Niña, and more. I have made a presentation so that this section does not have an overly long page.</p>
+    <p>This is the longest part of the course. In this section, you will learn about El Niño, La Niña, and more. I have made a google slides presentation to avoid oversized pages.</p>
     <h3>The Presentation</h3>
 <style>
     .embed-container { 
