--- a/pages/Vol4.html
+++ b/pages/Vol4.html
@@ -1,51 +1,45 @@
 <!-- Vol4 -->
 
 <span>
-         <h2 class="major">Tasks</h2>
-         <h3>Creating a simple plugin task</h3>
-         We'll take our last plugin and adding a simple task to it that tells the user when 10 seconds has past.<br>
-         First, go to your "Inactive-to-ReactiveExample.php" folder and create a new folder called "tasks".<br>
-         Create a new file called "MyTask.php".<br>
-         And put those contents inside of it.<br>
-         <pre><code>
-             &lt?php // As always when you start a PHP file
-
-             namespace Inactive-to-Reactive\tasks; // Use the same namespace as in your first file but add a \tasks who symbolise that this file is in the subfolder "tasks"
-
-             use pocketmine\scheduler\PluginTask; // This is the class that your task will extends to be a plugin task
-             use Inactive-to-Reactive\Inactive-to-ReactiveExample; // This will allow us to use our main class. It is a required argument for a plugin task.
-             
-             class MyTask extends PluginTask { // Remember that your task must have the same name as your file !
-
-                // First we need a __construct function which is used when you create a class to set default variables, ect...
-                public function __construct(Inactive-to-ReactiveExample $main, string $playername) { // The arguments you define here depends on what do you want to do exept for your base.
-                    parent::__construct($main); // Used to meet pocketmine requirements for the tasks. You can retrieve your main class at anytime and use it's methods on your class by using $this->getOwner()
-                    $this->playername = $playername; // So we can retreive the player for later.
-                }
-
-
-                // Then we'll create an onRun funtion wich will be called when the time has past to the execution of the task
-                public function onRun($tick) { // $tick is the current server tick when the task executes
-                    $player = $this->getOwner()->getServer()->getPlayer($this->playername()); // This retreive the main class with $this->getOwner() then asks the server for the player with the name $this->playername
-                    if($player instanceof Player) { // Basicly checks if the player we retreive is online.
-                        $player->sendMessage("10 seconds has past!"); // Sends him a message !
-                    }
-                }
-             }.
-             </code></pre>
-             That's it you created a task ! Now we'll see how to execute it.<br>
-             First we will make it execute 1 time, but delayed<br>
-             In your main class, where you did your "test" command.
-             <pre><code>
-                 $task = new tasks\MyTask($this, $sender->getName()); // Create the new class Task by calling
-                 $this->getServer()->getScheduler()->scheduleDelayedTask($task, 10*20); // Counted in ticks (1 second = 20 ticks)
-                 </code></pre>
-                 So the player will receive a message 10 seconds after he executed the command /test !<br>
-                 But now, what if we want the player to receive a message <b>each</b> 10 seconds?<br>
-                 Well, there's a special function for that ! We don't even need to change the task !<br>
-             <pre><code>
-                 $task = new tasks\MyTask($this, $sender->getName()); // Create the new class Task by calling
-                 $this->getServer()->getScheduler()->scheduleRepeatingTask($task, 10*20); // Counted in ticks (1 second = 20 ticks)
-                 </code></pre>
-<button onclick="location.hash='#quiz'">Next Lesson <img style="position: absolute" src="images/next.png"></img></button>
+         <h2 class="major">
+    The Process of Transferring Energy</h2>
+    <p>You will now learn how energy is transferred on Earth between the land, water, and atmosphere.</p>
+<h3>How does a tornado form, and where?</h3>
+<blockquote>We do not know for sure how a tornado forms, but we speculate that:</blockquote>
+<ul>
+    <li>Most tornadoes form from thunderstorms</li>
+    <li>Moist, warm air and cold air should meet up</li>
+    <li>The meeting up of these two air temperatures creates an instability in the atmosphere</li>
+    <li>In the lower atmosphere, an invisible spinning effect is created, after wind direction and wind speed change</li>
+    <li>Rising air tilts the spinning effect from horizontal to vertical, extending through most of the storm</li>
+</ul>
+<blockquote>In the United States, tornadoes tend to form in the Great Plains (found near central USA), and a part of florida bordering the Gulf of Mexico. The area in the Great Plains of Central USA is known as Tornado Alley where cold air from Canada meets the warm air from the Gulf of Mexico. On average nine tornadoes occur each year in Oklahoma and Texas (per 10,000 square miles).</blockquote>
+    <h3>Let's bust some myths, and prove some facts!</h3>
+    #1: If you live in a big city, a tornado will not hit you.
+    <blockquote>MYTH! In the past, a tornado has hit many big cities, including Dallas, Miami, and Salt Lake city. In addition, a tornado that hits a big city will have more debris than a tornado in the farmland!</blockquote>
+    #2: Tornados have picked people/animals up, and set them down without injury or damage.
+    <blockquote>FACT! Some people and animals have been transported over 1/4 mile without injury! Even glass cups and precious mugs have been picked up and set down without damage</blockquote>
+    #3: A tornado can drive a straw through a telephone pole
+    <blockquote>FACT! While this certainly does sound like a myth, the forces inside a tornado are incredibly powerful and are strong enough to turn small objects into deadly ammunition.</blockquote>
+    #4: If you live in a city surrounded by rivers, there will be no tornadoes because tornados cannot pass over water
+    <blockquote>MYTH! Many tornados have crossed rivers and streams, and they did not lose any speed! While folklore says that the city is immune to tornados, they can be wrong and lead to devastating results.</blockquote>
+    #5: Brick or stone buildings will protect me entirely from a tornado
+    <blockquote>MYTH! The winds of a tornado can cause roofs or walls to cave in. Also, tornadoes can drive many projectiles into the brick, causing damage to the building. But, these buildings offer more protection than most other buildings.</blockquote>
+    #6: Tornadoes can occur during the winter or during the night.
+    <blockquote>FACT! The probability of a tornado occuring is lower at night and during winter, but it is still possible. In the past, there have been tornadoes that caused more death an destruction than any other tornados in that area!</blockquote>
+    #7: Equalize the pressure in your house by opening windows.
+    <blockquote>MYTH! A tornado can easily tear off your roof, or smash a car through your wall, and that will equalize the pressure for you. Don't waste your time!</blockquote>
+    <h3>A tornado is threatening me! What should I do?.</h3>
+    <ul>
+        <li>Go to your safe room, or if outside, seek shelter. If not, proceed to the next bullet points</li>
+        <li>If you find shelter, go to the lowest floor of the building, and go to the inner-most room which is the most protected from the outside. If you do not find shelter, proceed to the next bullet points</li>
+        <li>Do not try to outrun the tornado, they can go up to 70 miles per hour.</li>
+        <li>Go to any sturdy shelter nearby, as hail and lightning often accompany tornadoes</li>
+        <li>Find a place to lay down flat. Try to make sure that this place is out of the area where the tornado is heading, and is lower than other areas. </li>
+        <li>Do not hide under an overpass</li>
+        <li>Abandon your vehicle to seek shelter.<li>
+        <li>Avoid sheltering under/near solitary objects or groups of trees due to lightning.<li>
+        <li>Protect your head and neck</li>
+    </ul>
+<button onclick="location.hash='#quiz'">Next Lesson</button>
 </span>
