--- a/pages/hidden.html
+++ b/pages/hidden.html
@@ -6,12 +6,18 @@
                 <section>
 			<h3 class="major">Skip To:<br></h3>
 			<h4 class="major">
-				<a href="#intro" style="text-decoration:none;">Definitions</a><br>
-				<a href="#Vol1" style="text-decoration:none;">Severe Storm Project</a><br>
-				<a href="#Vol2" style="text-decoration:none;">Tornados!</a><br>
-				<a href="#Vol3" style="text-decoration:none;">Local Weather Phenomenon</a><br>
-				<a href="#Vol4" style="text-decoration:none;">COMING SOON</a><br>
+				<a href="#intro" style="text-decoration:none;">Definitions (Kids Definitions project- Mandatory)</a><br>
+				<a href="#Vol1" style="text-decoration:none;">Severe Storm Project- Mandatory</a><br>
+				<a href="#Vol2" style="text-decoration:none;">Tornados! (Tornado Scavenger Hunt project- Optional)</a><br>
+				<a href="#Vol3" style="text-decoration:none;">Local Weather Phenomenon- Mandatory</a><br>
+				<a href="#Vol4" style="text-decoration:none;">Transferring Energy on Earth (Optional project, on the bottom of the page)</a><br>
 				<a href="#quiz" style="text-decoration:none;">Quiz</a><br>
 			</h4>
+			<blockquote>The projects listed below have been turned in the in-bin</blockquote>
+			<ul>
+				<li>Weather Watch questions and graph</li>
+				<li>If I Was A _____ worksheet</li>
+			</ul>
+			<blockquote>The "Climate Variables" project is shared on Google Drive and the "energy source debate" project was done in class</blockquote>
 </section>
 </span>
